added jvm options for neanderthal